fixed missing ch span

--- a/01_agama/samyukta/02/SA2_221.md
+++ b/01_agama/samyukta/02/SA2_221.md
@@ -295,7 +295,7 @@ next: ../03/index.html
 <p>Despite these differences, the content of these three versions are remarkably equiv., and we can clearly see that there was an original that hasn’t been changed drastically by any one of them. [<a href="#ref1">back</a>]</p></li>
 <li id="n2"><p>This list of names is reminescent of the disciple lists that became common in the introductions of later Buddhist scriptures, especially among Mahāyānists. It is not found in MN 146, but T1442 has a slightly larger list of nuns. Notes on each name can be found below:</p>
 <p><em>Cundā</em>. C. <span class="ch">純陀</span> (EMC. tʃɪuĕn-da). This is a well-known translit. of P/S. <em>cunda</em>. Presumably, it was in a feminine form: Cundā. The parallel in T1442 is an alt. form of the same translit. (<span class="ch">准陀</span>, EMC. tʃɪuĕn-da).</p>
-<p><em>Meṇḍikā</em>. C. 民陀 (EMC. miĕn-da). Meṇḍaka was the name of a prominent lay disciple of the Buddha. My tentative guess is that this was a feminine form of the same in Prakrit. Again, T1442 has the same translit.</p>
+<p><em>Meṇḍikā</em>. C. <span class="ch">民陀</span> (EMC. miĕn-da). Meṇḍaka was the name of a prominent lay disciple of the Buddha. My tentative guess is that this was a feminine form of the same in Prakrit. Again, T1442 has the same translit.</p>
 <p><em>Mārabhā</em>. C. <span class="ch">摩羅婆</span> (EMC. mua-la-bua). The <span class="ch">翻梵語</span> has an entry for <span class="ch">摩羅娑</span> immediately after the entry for <span class="ch">波羅遮羅</span> (the next name in this list), suggesting that <span class="ch">娑</span> was a typo for <span class="ch">婆</span>, which was fairly common for these two characters. The interpretation there reinforces this conclusion: <span class="ch">譯曰莫懶</span> (T2130.54.1002a16), which presumably describes <em>mā</em> (“no”) + <em>rabha</em> (“negligence”). The corresponding translit. in T1442 (<span class="ch">末臘婆</span>) also adds support for taking <span class="ch">娑</span> in <span class="ch">翻梵語</span> as a typo. Thus, I arrive at Mārabhā as this nun’s name.</p>
 <p><em>Pālācārā</em>. C. <span class="ch">波羅遮羅</span> (EMC. pua-la-tʃɪă-la). The <span class="ch">翻梵語</span> says for this translit.: <span class="ch">譯曰波羅者守遮羅者行</span> (T2130.54.1002a15), which suggests <em>pāla</em> (<span class="ch">守</span>, “guard”) + <em>ācāra</em> (<span class="ch">行</span>, “conduct”). There was a nun in P. sources named Paṭācārā. The alternation between -ṭ- and -ḷ- in Indic dialects was not so uncommon, so I suspect this is the same nun. As an added bit of evidence, T1442 has a nun named “great robe” (<span class="ch">大衣</span>), which was an ironic name for the mendicant’s patchwork robes. A synonym for this could well be S. <em>paṭaccara</em> (“worn-out garment”), which is very similar in pronunciation to P. Paṭācārā. It would seem that this nun’s name has suffered some confusion as it traveled between Indic dialects. I have retained the Pr. version found in this text given the uncertainties.</p>
 <p><em>Āḷavikā</em>. C. <span class="ch">阿羅毘迦</span> (EMC. •a-la-bii-kă). This was also the translit. of the monk Āḷavakā’s name found in the <cite>Sudarśana Vinaya Vibhāṣā</cite> (<span class="ch">善見律毘婆沙</span>, cf. T1462.24.764b16). His name was sometimes written Āḷavikā in P. sources. Buddhaghoṣa and the <span class="ch">善見律毘婆沙</span> both agree that he was named for the village where he was born. Buddhaghoṣa also says that all children born there were so named. The <span class="ch">翻梵語</span> has entries for this translit. at T2130.54.998b16 and 1002a17. It says: <span class="ch">阿羅毘迦 譯曰小語</span>. This suggests a word like S. <em>ālāpika</em>, which is also plausible. I’ve opted for the reading Āḷavikā here, especially since T1442 appears to include a translation of S. Aṭavī (<span class="ch">曠野</span>, “wilderness”), which is equiv. to Pr. Āḷavi, the name of the village.</p>
